<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spectracer</string>
    <string name="action_settings">Settings</string>
    <string name="reset">Reset</string>
    <string name="zero">0</string>
    <string name="play">Play</string>
    <string name="title">Spectracer</string>
    <string name="about">About</string>
    <string name="appDescription">Spectracer was created by Harrison Gregg.  The soundtrack is called Spectra by Chipzel.</string>
    <string name="highscores">Highscores</string>
    <string name="settings">Settings</string>
    <string name="start">Touch to Start</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_highscores">HighscoresActivity</string>
    <string name="volume">Volume</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="name">Name</string>
    <string name="submit_highscore">Submit highscore</string>
    <string name="highscore_nickname">Online name</string>
    <string name="reset_highscore">Reset Highscore</string>
    <string name="unlink_user_id">Unlink User ID</string>
    <string name="loading">Loading...</string>
    <string name="chipzel_s_site">Chipzel\'s Site</string>
    <string name="update_spectracer">Update Spectracer</string>

</resources>
