<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkRed"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context="com.harrison.spectracer.SettingsActivity"
    tools:ignore="MergeRootFrame" >

	<View
	  android:layout_width="match_parent"
	  android:layout_height="0dp"
	  android:layout_weight=".5"
	/>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="40sp" 
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp" 
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etName"
        android:layout_gravity="center"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/highscore_nickname"
        android:textColor="@color/white"
        android:ems="10" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/tvVolume"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:text="@string/volume"
        android:textColor="@color/white"
        android:textSize="20sp" 
        android:textStyle="bold"/>
    
    <SeekBar
        android:id="@+id/sbVolume"
        android:layout_gravity="center"
        android:layout_width="290dp"
        android:layout_height="wrap_content" />
    
    <Button 
        android:id="@+id/btnResetHighscore"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/reset_highscore"/>
    
    <Button 
        android:id="@+id/btnUnlinkUserId"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:text="@string/unlink_user_id"/>
    
   	<View
	  android:layout_width="match_parent"
	  android:layout_height="0dp"
	  android:layout_weight="1"
	/>

</LinearLayout>