<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gamecontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
    tools:context="com.harrison.spectracer.GameActivity"
    tools:ignore="MergeRootFrame" >

    <com.harrison.spectracer.MyGLSurfaceView
        android:id="@+id/myGLSurfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical" 
        >

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/zero"
            android:textSize="30sp" 
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvHighScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/zero"
            android:textSize="20sp"
            android:textColor="@color/white"/>
        
		<LinearLayout 
		    android:id="@+id/llHighscore"
		    android:visibility="invisible"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
		    android:orientation="vertical">
        
	        <TextView
	            android:id="@+id/tvHighscoreMessage"
	            android:layout_width="match_parent"
	            android:layout_height="100dp"
	            android:gravity="center"
	            android:text="@string/submit_highscore"
	            android:textSize="30sp"
	            android:textColor="@color/white"/>
	        
			<LinearLayout 
			    android:id="@+id/llName"
		        android:layout_width="300dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
			    android:orientation="horizontal">
	
				<TextView
				    android:id="@+id/tvName"
				    android:layout_width="wrap_content"
				    android:layout_height="match_parent"
				    android:gravity="left"
				    android:text="@string/name"
				    android:textColor="@color/white"
				    android:textSize="25sp" />
	
			    <EditText
			        android:id="@+id/etName"
			        android:layout_width="0dp"
			        android:layout_height="match_parent"
			        android:layout_weight="1"
			        android:hint="@string/highscore_nickname"
				    android:textColor="@color/white"
			        android:ems="10" >
			        <requestFocus />
			    </EditText>
			</LinearLayout>
		<Button
		    android:id="@+id/btnSubmit"
		    android:text="@string/submit_highscore" 
        	android:textColor="@color/white"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
			android:layout_gravity="center"
		    />
		
			
		</LinearLayout>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="center"
            android:text="@string/start"
            android:textSize="30sp"
            android:textColor="@color/white"/>

		   	<View
			  android:layout_width="match_parent"
			  android:layout_height="0dp"
			  android:layout_weight=".5"
			/>
        </LinearLayout>

</RelativeLayout>